--- a/test4.html
+++ b/test4.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- Nav tabs -->
-    <ul class="nav nav-tabs">
+    <!-- <ul class="nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link active" data-toggle="tab" href="#home">Home</a>
         </li>
@@ -31,14 +31,76 @@
         <li class="nav-item">
             <a class="nav-link" data-toggle="tab" href="#menu2">Menu 2</a>
         </li>
-    </ul>
+    </ul> -->
 
     <!-- Tab panes -->
-    <div class="tab-content">
+    <!-- <div class="tab-content">
         <div class="tab-pane container active" id="home">酷男</div>
         <div class="tab-pane container fade" id="menu1">靓女</div>
         <div class="tab-pane container fade" id="menu2">动漫</div>
+    </div> -->
+    <!-- <div id="accordion">
+
+        <div class="card">
+            <div class="card-header">
+                <a class="card-link" data-toggle="collapse" href="#collapseOne">
+                    Collapsible Group Item #1
+                </a>
+            </div>
+            <div id="collapseOne" class="collapse show" data-parent="#accordion">
+                <div class="card-body">
+                    Lorem ipsum..
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <a class="collapsed card-link" data-toggle="collapse" href="#collapseTwo">
+                    Collapsible Group Item #2
+                </a>
+            </div>
+            <div id="collapseTwo" class="collapse" data-parent="#accordion">
+                <div class="card-body">
+                    Lorem ipsum..
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <a class="collapsed card-link" data-toggle="collapse" href="#collapseThree">
+                    Collapsible Group Item #3
+                </a>
+            </div>
+            <div id="collapseThree" class="collapse" data-parent="#accordion">
+                <div class="card-body">
+                    Lorem ipsum..
+                </div>
+            </div>
+        </div>
+
     </div>
+
+
+    <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
+        <label class="custom-control-label" for="customRadioInline1">公开</label>
+    </div>
+    <div class="custom-control custom-radio custom-control-inline">
+        <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
+        <label class="custom-control-label" for="customRadioInline2">保密</label>
+    </div> -->
+    <input list="browsers">
+    <datalist id="browsers">
+        <option value="value1">
+        <option value="value2">
+        <option value="value3">
+        <option value="value4">
+        <option value="value5">
+    </datalist>
+
+
 </body>
 
 </html>
