--- a/test2.html
+++ b/test2.html
@@ -1,122 +1,137 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-<head lang="en">
+<head>
     <meta charset="UTF-8">
-    <title> 选项卡</title>
-    <style type="text/css">
-        /* CSS样式制作 */
-        * {
-            padding: 0px;
-            margin: 0px;
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <title>头像选择</title>
+    <style>
+        .nav-item {
+            width: 25%;
         }
 
-        a {
-            text-decoration: none;
-            color: black;
+        .nav-link {
+            text-align: center
         }
 
-        a:hover {
-            text-decoration: none;
-            color: #336699;
+        .container {
+            width: 444px;
+            padding: 0;
         }
 
-        #tab {
-            width: 270px;
-            padding: 5px;
-            height: 150px;
-            margin: 20px;
+        .all_photo {
+            width: 100%;
+            height: 160px;
+            padding: 10px 8px 0 15px;
+            background-color: #f4feff;
+            border: solid 1px #aec7cb;
+            z-index: 0;
         }
 
-        #tab ul {
-            list-style: none;
-            display: ;
-            height: 30px;
-            line-height: 30px;
-            border-bottom: 2px rgb(44, 217, 230) solid;
+        .all_photo .mouse_active {
+            background-color: #ff7100;
         }
 
-        #tab ul li {
-            background: #FFF;
-            cursor: pointer;
+        .all_photo div {
+            width: 52px;
+            height: 50px;
+            display: inline;
+            text-align: center;
+            padding-top: 2px;
+            border: solid 1px #cacaca;
+            margin: 10px 7px 14px 20px;
             float: left;
-            list-style: none height:29px;
-            line-height: 29px;
-            padding: 0px 10px;
-            margin: 0px 10px;
-            border: 1px solid #BBB;
-            border-bottom: 2px solid #C88;
         }
 
-        #tab ul li.on {
-            border-top: 2px solid Saddlebrown;
-            border-bottom: 2px solid #FFF;
-        }
-
-        #tab div {
-            height: 100px;
-            width: 250px;
-            line-height: 24px;
-            border-top: none;
-            padding: 1px;
-            border: 1px solid #336699;
-            padding: 10px;
-        }
-
-        .hide {
-            display: none;
+        .all_photo div img {
+            width: 48px;
+            height: 48px;
+            cursor: pointer;
         }
     </style>
-
-    <script type="text/javascript">
-        // JS实现选项卡切换
-        window.onload = function () {
-            var myTab = document.getElementById("tab");    //整个div
-            var myUl = myTab.getElementsByTagName("ul")[0];//一个节点
-            var myLi = myUl.getElementsByTagName("li");    //数组
-            var myDiv = myTab.getElementsByTagName("div"); //数组
-
-            for (var i = 0; i < myLi.length; i++) {
-                myLi[i].index = i;
-                myLi[i].onclick = function () {
-                    for (var j = 0; j < myLi.length; j++) {
-                        myLi[j].className = "off";
-                        myDiv[j].className = "hide";
-                    }
-                    this.className = "on";
-                    myDiv[this.index].className = "show";
-                }
-            }
-        }
-    </script>
-
 </head>
 
 <body>
-    <!-- HTML页面布局 -->
-    <div id="tab">
-        <ul>
-            <li class="off">房产</li>
-            <li class="on">家居</li>
-            <li class="off">二手房</li>
+    <div class="container">
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#home">男孩</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#menu1">女孩</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#menu2">卡通</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#menu3">动漫</a>
+            </li>
         </ul>
-        <div id="firstPage" class="hide">
-            <a href="#">275万购昌平邻铁三居 总价20万买一居</a><br />
-            <a href="#">200万内购五环三居 140万安家东三环</a><br />
-            <a href="#">北京首现零首付楼盘 53万购东5环50平</a><br />
-            <a href="#">京楼盘直降5000 中信府 公园楼王现房</a><br />
-        </div>
-        <div id="secondPage" class="show">
-            <a href="#">40平出租屋大改造 美少女的混搭小窝</a><br />
-            <a href="#">经典清新简欧爱家 90平老房焕发新生</a><br />
-            <a href="#">新中式的酷色温情 66平撞色活泼家居</a><br />
-            <a href="#">瓷砖就像选好老婆 卫生间烟道的设计</a><br />
-        </div>
-        <div id="thirdPage" class="hide">
-            <a href="#">通州豪华3居260万 二环稀缺2居250w甩</a><br />
-            <a href="#">西3环通透2居290万 130万2居限量抢购</a><br />
-            <a href="#">黄城根小学学区仅260万 121平70万抛!</a><br />
-            <a href="#">独家别墅280万 苏州桥2居优惠价248万</a><br />
+
+        <!-- Tab panes -->
+        <div class="tab-content">
+            <div id="home" class="container tab-pane active">
+                <div class="all_photo" id="all_photo_0" style="display :block">
+                    <div><img src="img/n1.jpeg"></a></div>
+                    <div><img src="img/n2.jpeg"></a></div>
+                    <div><img src="img/n3.jpeg"></a></div>
+                    <div><img src="img/n4.jpeg"></a></div>
+                    <div><img src="img/n5.jpeg"></a></div>
+                    <div><img src="img/n6.jpeg"></a></div>
+                    <div><img src="img/n7.jpeg"></a></div>
+                    <div><img src="img/n8.jpeg"></a></div>
+                    <div><img src="img/n9.jpeg"></a></div>
+                    <div><img src="img/n10.jpeg"></a></div>
+                </div>
+            </div>
+            <div id="menu1" class="container tab-pane fade">
+                <div class="all_photo" id="all_photo_0" style="display :block">
+                    <div><img src="img/mm1.jpeg"></a></div>
+                    <div><img src="img/mm2.jpeg"></a></div>
+                    <div><img src="img/mm3.jpeg"></a></div>
+                    <div><img src="img/mm4.jpeg"></a></div>
+                    <div><img src="img/mm5.jpeg"></a></div>
+                    <div><img src="img/mm6.jpeg"></a></div>
+                    <div><img src="img/mm7.jpeg"></a></div>
+                    <div><img src="img/mm8.jpeg"></a></div>
+                    <div><img src="img/mm9.jpeg"></a></div>
+                    <div><img src="img/mm10.jpeg"></a></div>
+                </div>
+            </div>
+            <div id="menu2" class="container tab-pane fade">
+                <div class="all_photo" id="all_photo_0" style="display :block">
+                    <div><img src="img/kt1.jpg"></a></div>
+                    <div><img src="img/kt2.jpg"></a></div>
+                    <div><img src="img/kt3.jpg"></a></div>
+                    <div><img src="img/kt4.jpg"></a></div>
+                    <div><img src="img/kt5.jpg"></a></div>
+                    <div><img src="img/kt6.jpg"></a></div>
+                    <div><img src="img/kt7.jpg"></a></div>
+                    <div><img src="img/kt8.jpg"></a></div>
+                    <div><img src="img/kt9.jpg"></a></div>
+                    <div><img src="img/kt10.jpg"></a></div>
+                </div>
+            </div>
+            <div id="menu3" class="container tab-pane fade">
+                <div class="all_photo" id="all_photo_0" style="display :block">
+                    <div><img src="img/dm1.jpg"></a></div>
+                    <div><img src="img/dm2.jpg"></a></div>
+                    <div><img src="img/dm3.jpg"></a></div>
+                    <div><img src="img/dm4.jpg"></a></div>
+                    <div><img src="img/dm5.jpg"></a></div>
+                    <div><img src="img/dm6.jpg"></a></div>
+                    <div><img src="img/dm7.jpg"></a></div>
+                    <div><img src="img/dm8.jpg"></a></div>
+                    <div><img src="img/dm9.jpg"></a></div>
+                    <div><img src="img/dm10.jpg"></a></div>
+                </div>
+            </div>
         </div>
     </div>
 
