--- a/test4.html
+++ b/test4.html
@@ -17,6 +17,12 @@
 
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <style>
+        .carousel-item {
+            height: 300px;
+            width: 187px;
+        }
+    </style>
 </head>
 
 <body>
@@ -91,15 +97,31 @@
         <input type="radio" id="customRadioInline2" name="customRadioInline1" class="custom-control-input">
         <label class="custom-control-label" for="customRadioInline2">保密</label>
     </div> -->
-    <input list="browsers">
+    <!-- <input list="browsers">
     <datalist id="browsers">
         <option value="value1">
         <option value="value2">
         <option value="value3">
         <option value="value4">
         <option value="value5">
-    </datalist>
+    </datalist> -->
 
+    <div class="carousel-item">
+        <div class="row">
+            <div class="col-sm">
+                <img src="/img/kt1.jpg">
+            </div>
+            <div class="col-sm">
+                <img src="/img/kt4.jpg">
+            </div>
+            <div class="col-sm">
+                <img src="/img/kt3jpg">
+            </div>
+            <div class="col-sm">
+                <img src="/img/kt2.jpg">
+            </div>
+        </div>
+    </div>
 
 </body>
 
