--- a/index-2.html
+++ b/index-2.html
@@ -128,7 +128,7 @@
                             <a href="" title="">商品文字简介带链接</a>
                         </div>
                         <div class="right_show">
-                            <div class="rating">
+                            <div class="rat">
                                 <div class="name">商品评价</div>
                                 <!-- <div>
                                     <span class="star" name="goods_star" data-score="0" style="width: 110px;">
@@ -174,28 +174,32 @@
                                     <div class="name">快递员满意度</div>
                                 </li>
                             </ul> -->
-                            <div class="rating">
-                                <div class="name">自营服务评论</div>
+                            <div class="rating_pr">
+                                <div class="name_pr">自营服务评论</div>
                             </div>
-                            <div class="think">
+                            <div class="rat">
                                 <div class="name">商品包装</div>
                             </div>
-                            <div class="think">
+                            <div class="rat">
                                 <div class="name">物流速度</div>
                             </div>
-                            <div class="think">
+                            <div class="rat">
                                 <div class="name">快递员满意度</div>
                             </div>
-                            <div class="upload">
-                                <div class="submit">
-                                    <button>发表评论</button>
-                                    <!-- <a href="javascript:;" class="btn_big" id="submit_comment">发表评论</a> -->
-                                    <a href="javascript:;" class="choose " id="anonymous_submit"></a><label>匿名评论</label>
-                                </div>
-                            </div>
+
                         </div>
                     </div>
-
+                    <!-- <div class="upload">
+                        <div class="submit">
+                            <button>发表评论</button>
+                            <a href="javascript:;" class="btn_big" id="submit_comment">发表评论</a>
+                            <a href="javascript:;" class="choose " id="anonymous_submit"></a><label>匿名评论</label>
+                        </div>
+                    </div> -->
+                    <div class="submit">
+                        <button class="btn_big">发表评论</button>
+                        <input type="checkbox" class="choose"></input><label class="unname_rating">匿名评论</label>
+                    </div>
                 </div>
             </div>
         </div>
@@ -204,6 +208,7 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/popper.js"></script>
 <script src="bootstrap/js/bootstrap.min.js"></script>
+
 </body>
 
 </html>
