--- a/xx3-1.html
+++ b/xx3-1.html
@@ -12,12 +12,10 @@
 </head>
 
 <body>
-    <div>
+    <div class="rating-lists">
         <form>
-            <div class="rating-lists">
-                <label class="title" for="comment">商品评分：</label>
-                <input class="rating rating1" id="1" name="comment" min="0" max="5" step="1" data-size="sm" value="0">
-            </div>
+            <!-- <label class="title" for="comment">商品评分：</label> -->
+            <input class="rating rating1" id="1" name="comment" min="0" max="5" step="1" data-size="sm" value="0">
         </form>
     </div>
 
