--- a/index-2-01.html
+++ b/index-2-01.html
@@ -15,6 +15,7 @@
     <!-- 星星需求 -->
     <link href="../dangdang/assets/css/star-rating.css" media="all" rel="stylesheet" type="text/css" />
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet">
+    <script src="../dangdang/assets/js/star-rating.js" type="text/javascript"></script>
 </head>
 <div class="mydang">
     <div class="mydang_left1">
@@ -142,6 +143,9 @@
                             </div>
                             <div class="think">
                                 <div class="name">大家认为</div>
+                                <p class="tag_box" id="quick_comment">
+                                    <a href="" class="tag" rel="330">书本的tag</a>
+                                </p>
                             </div>
                             <div class="rela">
                                 <div class="name">评论晒单</div>
@@ -221,15 +225,15 @@
         readonly: false,  /*只读模式 跟上面一样效果，不知道啥区别*/
         // starCaptions: { 1: '1分 太坑', 2: '2分 凑合', 3: '3分 一般', 4: '4分 很好', 5: '5分 非常好' },
         // starCaptionClasses: { 1: 'text-danger', 2: 'text-warning', 3: 'text-info', 4: 'text-primary', 5: 'text-success' }
-        starCaptions: { 0: '点击星星评分', 0.5: '1分 超烂啊', 1: '2分 不值一看', 1.5: '3分 水准之下', 2: '4分 水准之下', 2.5: '5分 聊胜于无', 3: '6分 聊胜于无', 3.5: '7分 值得一看', 4: '8分 值得一看', 4.5: '9分 极力推荐', 5: '10分 极力推荐' },
-        starCaptionClasses: { 0: 'text-info', 0.5: 'text-info', 1: 'text-info', 1.5: 'text-info', 2: 'text-info', 2.5: 'text-info', 3: 'text-info', 3.5: 'text-info', 4: 'text-info', 4.5: 'text-info', 5: 'text-info' }
+        starCaptions: { 0.5: '1分 超烂啊', 1: '2分 不值一看', 1.5: '3分 水准之下', 2: '4分 水准之下', 2.5: '5分 聊胜于无', 3: '6分 聊胜于无', 3.5: '7分 值得一看', 4: '8分 值得一看', 4.5: '9分 极力推荐', 5: '10分 极力推荐' },
+        starCaptionClasses: { 0.5: 'text-info', 1: 'text-info', 1.5: 'text-info', 2: 'text-info', 2.5: 'text-info', 3: 'text-info', 3.5: 'text-info', 4: 'text-info', 4.5: 'text-info', 5: 'text-info' }
     });
 
     /*这里是更改评分后，星星的打分显示 .rating('update',3)这样*/
-    $('.rating1').rating({}).rating('update', 1);
-    $('.rating2').rating({}).rating('update', 1);
-    $('.rating3').rating({}).rating('update', 1);
-    $('.rating4').rating({}).rating('update', 1);
+    $('.rating1').rating({}).rating('update', 0);
+    // $('.rating2').rating({}).rating('update', 1);
+    // $('.rating3').rating({}).rating('update', 1);
+    // $('.rating4').rating({}).rating('update', 0);
 </script>
 
 
